--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "babel": "node_modules/.bin/babel pages -d functions/pages && babel index.js -d functions && babel components -d functions/components && babel config -d functions/config && babel dbActions -d functions/dbActions",
+	"sass": "sassgraph --watch static/bootstrap.min.scss:functions/static/bootstrap.min.css && sassgraph --watch static/styles.scss:functions/static/styles.css"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -16,9 +19,11 @@
     "@vtex/react-csv-parse": "^3.0.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "babel": "^6.23.0",
     "es6-promise": "^4.2.6",
     "file-system": "^2.2.2",
     "firebase": "^6.0.4",
+    "isomorphic-fetch": "^2.2.1",
     "next": "^8.1.0",
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "node-sass": "^4.12.0",
@@ -29,5 +34,23 @@
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.7.0",
+    "babel-core": "^6.7.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-css-modules-transform": "^1.6.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^2.1.1",
+    "express": "^4.15.4",
+    "firebase-admin": "^5.2.1",
+    "firebase-functions": "^2.3.1",
+    "firebase-tools": "^6.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^3.5.5"
   }
 }
