--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 
 # production
 /build
+/out
+/functions
+
 
 # misc
 .DS_Store
@@ -20,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
