--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # production
 /build
 /out
-/functions
+/.next
 
 
 # misc
@@ -23,4 +23,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log*
 node_modules
