--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-redux-firebase": "^2.2.6",
