--- a/functions/package.json
+++ b/functions/package.json
@@ -9,12 +9,15 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~6.0.0",
+    "body-parser": "^1.19.0",
+    "const": "^1.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.1.0"
   },
   "engines": {
-        "node": "8"
-      },
-	  
+    "node": "8"
+  },
   "private": true
 }
