--- a/firebase.json
+++ b/firebase.json
@@ -12,13 +12,27 @@
       "type": 301
     },
     {
+      "source": "/tasks/tasks",  // captures the entire URL segment beginning at "post"
+      "destination": "/tasks", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    },
+    {
       "source": "/users/tasks",  // captures the entire URL segment beginning at "post"
       "destination": "/tasks", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    }, {
+      "source": "/users/users",  // captures the entire URL segment beginning at "post"
+      "destination": "/users", // includes the entire URL segment identified and captured by the "source" value
       "type": 301
     },
     {
       "source": "/assigned-tasks/task-reports",  // captures the entire URL segment beginning at "post"
       "destination": "/task-reports", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    },
+    {
+      "source": "/assigned-tasks/assigned-tasks",  // captures the entire URL segment beginning at "post"
+      "destination": "/assigned-tasks", // includes the entire URL segment identified and captured by the "source" value
       "type": 301
     },
     {
@@ -32,6 +46,11 @@
       "type": 301
     },
     {
+      "source": "/task-reports/task-reports",  // captures the entire URL segment beginning at "post"
+      "destination": "/task-reports", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    },
+    {
       "source": "/task-reports/assigned-tasks",  // captures the entire URL segment beginning at "post"
       "destination": "/assigned-tasks", // includes the entire URL segment identified and captured by the "source" value
       "type": 301
@@ -42,8 +61,38 @@
       "type": 301
     },
     {
+      "source": "/history/history",  // captures the entire URL segment beginning at "post"
+      "destination": "/history", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    },
+    {
       "source": "/history/assigned-tasks",  // captures the entire URL segment beginning at "post"
       "destination": "/assigned-tasks", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    },
+    {
+      "source": "/personal-information/assigned-tasks",  // captures the entire URL segment beginning at "post"
+      "destination": "/assigned-tasks", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    },
+    {
+      "source": "/personal-information/task-reports",  // captures the entire URL segment beginning at "post"
+      "destination": "/task-reports", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    },
+    {
+      "source": "/personal-information/history",  // captures the entire URL segment beginning at "post"
+      "destination": "/history", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    },
+    {
+      "source": "/personal-information/tasks",  // captures the entire URL segment beginning at "post"
+      "destination": "/tasks", // includes the entire URL segment identified and captured by the "source" value
+      "type": 301
+    },
+    {
+      "source": "/personal-information/users",  // captures the entire URL segment beginning at "post"
+      "destination": "/users", // includes the entire URL segment identified and captured by the "source" value
       "type": 301
     }]
     
